chore: fix next button string, add current position button

--- a/OpenYourWorldAndroid/app/src/main/res/values/strings.xml
+++ b/OpenYourWorldAndroid/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="second_fragment_label">Statistics</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="current_position">Current Position</string>
 </resources>
